2009-01-20  Vincent Untz  <vuntz@gnome.org>

	* panel-session.c: (panel_session_init): add a reminder about things to
	check when migrating to eggsmclient.

2009-01-20  Vincent Untz  <vuntz@gnome.org>

	Connect to the session manager only when we're really ready, so that
	the struts are really set. Therefore, nautilus doesn't have jumping
	icons on login.
	Fix bug #563635.
	Based on patch by Behdad Esfahbod <behdad@gnome.org>

	* main.c: (main): don't connect to the session manager automatically,
	and move the session initialization code just before we enter the
	main loop
	* panel-session.c: (panel_session_init): connect to the session manager

2009-01-20  Vincent Untz  <vuntz@gnome.org>

	* panel-toplevel.c: (panel_toplevel_button_press_event): don't require
	the mouse button modifier to move a non-expanded panel. Only the
	handles can be grabbed, and they're there for that.

2009-01-20  Vincent Untz  <vuntz@gnome.org>

	Correctly set the struts before and during the initial toplevel
	animation, so that desktop icons don't jump.
	Part of bug #554343.
	Loosely based on some code by Ray Strode <rstrode@redhat.com>

	* panel-toplevel.c: (panel_toplevel_update_struts): if we're still
	doing the initial animation, then we're really only interested in the
	end of animation coordinates for the struts. Also fix a typo in code
	that might have weird side-effects on multiscreen.
	(panel_toplevel_update_auto_hide_position): if we're looking for the
	end position of animation, then get the real auto-hide size. It's
	useful for the initial animation where the position is hidden (and
	therefore, we don't get the real auto-hide size).
	(panel_toplevel_update_animating_position): mark the initial animation
	as done.
	(panel_toplevel_update_position): trivial update
	(panel_toplevel_update_geometry): cleanup
	(panel_toplevel_initially_hide): don't set the struts here, it's
	useless
	(panel_toplevel_calculate_animation_end_geometry): new, split from